fix ui-action z-index

--- a/packages/esm-patient-chart-app/src/ui-components/patient-chart.component.scss
+++ b/packages/esm-patient-chart-app/src/ui-components/patient-chart.component.scss
@@ -14,6 +14,7 @@ $actionPanelExpandedOffset: $actionNavOffset + $actionPanelOffset;
   position: relative;
   z-index: 1;
   width: 100%;
+  padding-right: 0.5rem;
 }
 
 .chartreview {
