--- a/packages/esm-patient-medications-app/src/medications-summary/floating-order-basket-button.scss
+++ b/packages/esm-patient-medications-app/src/medications-summary/floating-order-basket-button.scss
@@ -7,7 +7,7 @@
   height: 56px;
   font-weight: bold;
   padding-right: 15px !important;
-
+  z-index: 1;
   .elementContainer {
     display: flex;
   }
